<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/firstNameLabel"
        style="@style/textViewBase"
        android:textColor="@color/dark_gray"
        android:text="@string/firstName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextFirstName"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        app:boxBackgroundMode="none"
        style="@style/editTextBase"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/lastNameLabel"
        style="@style/textViewBase"
        android:textColor="@color/dark_gray"
        android:text="@string/lastName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextLastName"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        app:boxBackgroundMode="none"
        style="@style/editTextBase"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/emailLabel"
        style="@style/textViewBase"
        android:textColor="@color/dark_gray"
        android:text="@string/emailAddress"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextEmail"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor"
        app:boxBackgroundMode="none"
        style="@style/editTextBase"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/passwordLabel"
        style="@style/textViewBase"
        android:textColor="@color/dark_gray"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        tools:ignore="LabelFor"
        app:boxBackgroundMode="none"
        style="@style/editTextBase"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"/>

    <Button
        android:id="@+id/btnSignUp"
        style="@style/orangeButton"
        android:layout_width="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.066" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.93" />
</androidx.constraintlayout.widget.ConstraintLayout>